I have added a nav bar with titles, landing image

--- a/index.html
+++ b/index.html
@@ -12,6 +12,27 @@
 
   </head>
   <body>
+    <div class="wrapper">
 
+  <ul>
+    <li>Home</li>
+    <li><a href="portfolio.html">Portfolio</a></li>
+    <li>About</li>
+    <li><a href="blog.html">Blog</a></li>
+  </ul>
+
+  <div class="title">
+    <h1><span>|</span>Rob Davis <br> Photography</h1>
+  </div>
+
+  <div class="sub-heading">
+    <h1> <span>|</span> Nature Photographer</h1>
+  </div>
+
+
+  <img src="https://wildfor.life/sites/default/files/species/hero/tiger_hero.jpg" alt="" class="landing-image" id=main-image>
+
+
+</div>
   </body>
 </html>
