--- a/index.html
+++ b/index.html
@@ -32,6 +32,36 @@
 
   <img src="https://wildfor.life/sites/default/files/species/hero/tiger_hero.jpg" alt="" class="landing-image" id=main-image>
 
+  <div class="sub-titles">
+    <h1><a href="#"> <span>|</span>My latest blogs</a></h1>
+  </div>
+
+  <div class="grid-container">
+    <div class="card">
+      <img src="https://www.thoughtco.com/thmb/DpVtY--UXVOtG68m9LhMY7be2w0=/768x0/filters:no_upscale():max_bytes(150000):strip_icc()/happy-red-panda-171399380-5b574325c9e77c005b690b41.jpg" alt="">
+      <div class="container">
+        <h1> <span>|</span>Nepal trip</h1>
+        <h3> 11/10/2019</h3>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="https://cites.org/sites/default/files/eng/news/sg/2017/snow_leopard4.jpg" alt="">
+      <div class="container">
+        <h1> <span>|</span>Snow leopard adventure</h1>
+        <h3> 11/10/2019</h3>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="https://assets.nrdc.org/sites/default/files/styles/full_content--retina/public/media-uploads/wlds43_654640_2400.jpg?itok=LbhnLIk9" alt="">
+      <div class="container">
+        <h1> <span>|</span>Elephant story</h1>
+        <h3> 11/10/2019</h3>
+      </div>
+    </div>
+
+  </div>
 
 </div>
   </body>
