--- a/index.html
+++ b/index.html
@@ -63,6 +63,22 @@
 
   </div>
 
+  <div class="sub-titles">
+  <h1> <a href="#"><span>|</span>View my portfolio</a></h1>
+</div>
+
+<div class="gallery-grid">
+  <img src="https://images.theconversation.com/files/243439/original/file-20181101-83635-1xcrr39.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=926&fit=clip"
+  alt="" class="card">
+  <img src="https://images.theconversation.com/files/260231/original/file-20190221-195864-2t43e7.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=496&fit=clip"
+  alt="" class="card">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/60/Equus_quagga.jpg/1200px-Equus_quagga.jpg"
+  alt="" class="card">
+  <img src="https://www.awf.org/sites/default/files/public%3A//media/gallery_0/wildlife/Giraffe/GiraffeConservationKenyaAWF.jpg"
+  alt="" class="card">
+</div>
+
+
 </div>
   </body>
 </html>
