--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,13 @@
     </ul>
 
     <div class="title">
-      <h1>Rob Davis <br> Photography</h1>
+      <h1>Rob Davis <br> Blog</h1>
     </div>
 
+    <img src="https://asset-manager.bbcchannels.com/i/2ehlh1c20e61000" alt="" class="landing-image" id=main-image>
+
+    <div class="sub-titles">
+      <h1><a href="#"> <span>|</span>My blogs</a></h1>
+    </div>
+    
     </div>
